# testing

./: .envrc  .gitignore  CLAUDE.md  Dockerfile  Martian Transcript copy.docx  README.md  SETUP-GITHUB-PAGES.md  Taskfile.yml  conftest.py  docker-compose.yml  playwright.config.py  pyproject.toml  pytest.ini  report-history.json  report.html
.github/workflows/: create-index.py  fix-html-media.py  test-and-deploy.yml
_site/: index.html  report-history.json  report.html
runs/27267705544/: junit-results.xml  report.html
runs/27268130055/: junit-results.xml  report.html
runs/27320372530/: junit-results.xml  report.html
runs/27391065340/: junit-results.xml  report.html
runs/27454043028/: junit-results.xml  report.html
runs/27486305569/: junit-results.xml  report.html
runs/27521101607/: junit-results.xml  report.html
runs/28213448327/: junit-results.xml  report.html
runs/28275850881/: junit-results.xml  report.html
runs/28309057108/: junit-results.xml  report.html
runs/28345178261/: junit-results.xml  report.html
runs/28416345320/: junit-results.xml  report.html
runs/28489748172/: junit-results.xml  report.html
runs/28561140058/: junit-results.xml  report.html
runs/28633644791/: junit-results.xml  report.html
runs/28691571944/: junit-results.xml  report.html
runs/28726608666/: junit-results.xml  report.html
runs/28763752767/: junit-results.xml  report.html
runs/28836589988/: junit-results.xml  report.html
runs/28911693682/: junit-results.xml  report.html
runs/28988929126/: junit-results.xml  report.html
tests/: draft.py  run.py
(+33 files in other folders)
